--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets/img/"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
